# spielzeug

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
cmake/: compile_flags.cmake
engine/: CMakeLists.txt
engine/scene/: camera.cppm  input.cppm  module.cppm
platform/: CMakeLists.txt  sdl.cpp  sdl.cppm
renderer/gl/: CMakeLists.txt  export.cppm  glad.hpp  light.cpp  light.cppm  material.cpp  material.cppm  mesh.cppm  mesh_basic.cppm  model.cpp  model.cppm  renderer.cpp  renderer.cppm  shader.cpp  shader.cppm  texture.cpp  texture.cppm  triangle.cpp  triangle.cppm
renderer/gl/shaders/: shader.frag  shader.vert
tools/: CMakeLists.txt  tracy.cpp  tracy.hpp
